RESOLVED FIXED272514
REGRESSION(277367@main): Broke Ubuntu LTS build
https://bugs.webkit.org/show_bug.cgi?id=272514
Summary REGRESSION(277367@main): Broke Ubuntu LTS build
Philippe Normand
Reported 2024-04-11 01:39:58 PDT
.
Attachments
Philippe Normand
Comment 1 2024-04-11 01:42:44 PDT
EWS
Comment 2 2024-04-11 03:55:51 PDT
Committed 277376@main (bb98aa832b45): <https://commits.webkit.org/277376@main> Reviewed commits have been landed. Closing PR #27135 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-11 03:56:14 PDT
Note You need to log in before you can comment on or make changes to this bug.