REGRESSION(277367@main): Broke Ubuntu LTS build https://bugs.webkit.org/show_bug.cgi?id=272514

Reviewed by Xabier Rodriguez-Calvar.

The GstCustomMeta.structure field is in public API only since GStreamer 1.24, so fallback to
gst_custom_meta_get_structure() function which covers us since version 1.20.

* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::retrieveTemporalIndex):

Canonical link: https://commits.webkit.org/277376@main